# test_case_ccr

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  conftest.py  entrypoint.production.sh  pyproject.toml
backend/common/: fields.py  pagination.py  permissions.py  validators.py
backend/config/: asgi.py  celery.py  routers.py  settings.py  urls.py  wsgi.py
backend/event_app/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  tasks.py  viewsets.py
backend/event_app/migrations/: 0001_initial.py  0002_alter_event_options_alter_event_published_at_and_more.py  0003_remove_eventimage_image_preview.py  0004_alter_event_finishing_at_alter_event_published_at_and_more.py  0005_alter_event_creator_alter_event_finishing_at_and_more.py  0006_alter_eventlocation_coordinates.py
backend/event_app/tests/: factories.py  test_views.py
backend/templates/admin/: upload_events.html
backend/templates/events/: email.html
gitlab/: build.yml  deploy.yml  linter.yml  release.yml  test.yml  test_migrations.yml
